Add(BSB) : S3Config 추가 및 Like -> UserLike 변경

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### private ###
+/src/main/resources/application-private.properties
+/src/main/resources/application.properties
